    * Fixed bug where a custom bundle identifier in a saved Profile would not be loaded
    * Fixed bug where the Create button would remain greyed out even though all requirements were satisfied
    * Fixed bug where progress indicator would keep animating after execution in Progress Bar output mode
    * New feature: If script prints "QUITAPP" to STDOUT, the wrapper application will quit.

    TODO:  It would be great if the Save As dialog remembered the options you last selected for Development version, Optimize NIB and Use XML instead of Binary.

    TODO:  Hide PROGRESS:XX and other bidirectional communications syntax from output text field
    TODO:  Default profile as a preference
    TODO:  Fix Edit Drop Settings menu item enabled when Accept dropped files is not checked
    TODO:  Fix broken "Select Image file as icon..." functionality on retina displays
    TODO:  Support for selection in Status Menu output, just like in Tapir. Script called with argument line.
    TODO:  Refactor create: method in app spec class into multiple methods, e.g. infoplist and appsettingsplist getters
    TODO:  Make generated applications function even if they are moved while running
    TODO:  New button-based output mode.
    TODO:  New "Test" button under Args dialog, which executes the shown command in Terminal
    TODO:  Long GNU named params, e.g. --some-option


For 4.8
    * New "Prompt for file on launch" option
    * Redesigned, user-friendlier Drop Settings sheet
    * Fixed issue where version of generated apps would not appear in Get Info in Finder (missing CFBundleShortVersionString)
    * Generated apps have NSHumanReadableCopyright defined again
    * Extensive updates to documentation
    * "Provide as a Mac OS X Service" no longer enabled by default
    * Removed all support for file types.  They are ancient crust now mostly ignored by Mac OS X and should no longer be used.
    * Improved uninstall script